# itu-thesis

./: .dockerignore  .gitignore  Dockerfile  README.md  asd.py  build.sh  copy.sh  job_copy.sh  mac-build.sh  pyproject.toml  rano_run.py  requirements.txt  run.py  test.py  units.md
Notes/: Old_RandomSearch_FA.txt  RandomSearch_FA.txt  assumptions.txt  colony-creation.txt
algorithms/: PID.py  base_controller.py  control_api.py  debug_api.py  random_and_home_controller.py  random_and_recruit_controller.py  random_search_controller.py  sensor_api.py  waypoint_controller.py
crap/: asdjkdfklasd.py  test.py  test2.py  test3.py  test4.py
engine/: battery.py  constraints.py  debug_colors.py  environment.py  helpers.py  light_sensor.py  motor.py  objects.py  robot.py  robot_spec.py  simulation.py  tether.py  types.py
evolutionary/: Plotter.py  colony.py  evolutionary_test_01.py  evolutionary_test_02.py  worlds.py
pytest/: test_angle_calc.py  test_motor.py  test_robot_spec.py  test_units.py  test_world_meta.py
sim_math/: angles.py  units.py  units_base.py  world_meta.py
tests/: test-01-env.py  test-02-resource-homebase.py  test-03-manual-control.py  test-04-manual-grab.py  test_01_env.py  test_02_resource_homebase.py  test_03_manual_control.py  test_04_manual_grab.py  test_05_random_search.py  test_06_two_constraints_bug.py  test_07_light_emitter.py  test_07_messages.py  test_08_light_sensing.py  test_09_PID_counter_steering.py  test_10_random_and_home.py  test_11_recruit.py  test_12_multiple_pygame.py  test_13_multiple_sims.py  test_14_pygad_multi.py  test_16_evo.py  (+12 more)
(+1 files in other folders)
