[tool.poetry]
name = "itu-thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pymunk = "^6.11.1"
pygame = "^2.6.1"
numpy = "^1.26.4"
pytest = "^8.3.5"
termcolor = "^2.5.0"
pygad = "^3.4.0"
matplotlib = "3.7.0"

[tool.poetry.group.dev.dependencies]
pyqt5 = "^5.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
