[tool.poetry]
name = "itu-thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pymunk = "^6.11.1"
pygame = "^2.6.1"
numpy = "^2.2.3"
pytest = "^8.3.5"
termcolor = "^2.5.0"
pygad = "^3.4.0"
matplotlib = "3.7.0"
scipy = "^1.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
